assignment2/y.output
Terminals unused in grammar

    DO
    BREAK
    CHAR
    DOUBLE
    SWITCH
    CASE
    DEFAULT
    CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: ε

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

    8 $@2: ε

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier

   14 $@3: ε

   15 compound_statement: LCURL $@3 statements RCURL
   16                   | LCURL RCURL

   17 var_declaration: type_specifier declaration_list SEMICOLON

   18 type_specifier: INT
   19               | FLOAT
   20               | VOID

   21 declaration_list: declaration_list COMMA ID
   22                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   23                 | ID
   24                 | ID LTHIRD CONST_INT RTHIRD

   25 statements: statement
   26           | statements statement

   27 statement: var_declaration
   28          | func_definition
   29          | expression_statement
   30          | compound_statement
   31          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   32          | IF LPAREN expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement ELSE statement
   34          | WHILE LPAREN expression RPAREN statement
   35          | PRINTLN LPAREN ID RPAREN SEMICOLON
   36          | RETURN expression SEMICOLON

   37 expression_statement: SEMICOLON
   38                     | expression SEMICOLON

   39 variable: ID
   40         | ID LTHIRD expression RTHIRD

   41 expression: logic_expression
   42           | variable ASSIGNOP logic_expression

   43 logic_expression: rel_expression
   44                 | rel_expression LOGICOP rel_expression

   45 rel_expression: simple_expression
   46               | simple_expression RELOP simple_expression

   47 simple_expression: term
   48                  | simple_expression ADDOP term

   49 term: unary_expression
   50     | term MULOP unary_expression

   51 unary_expression: ADDOP unary_expression
   52                 | NOT unary_expression
   53                 | factor

   54 factor: variable
   55       | ID LPAREN argument_list RPAREN
   56       | LPAREN expression RPAREN
   57       | CONST_INT
   58       | CONST_FLOAT
   59       | variable INCOP
   60       | variable DECOP

   61 argument_list: arguments
   62              | ε

   63 arguments: arguments COMMA logic_expression
   64          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 32 33
    ELSE (259) 33
    FOR (260) 31
    WHILE (261) 34
    DO (262)
    BREAK (263)
    INT (264) 18
    CHAR (265)
    FLOAT (266) 19
    DOUBLE (267)
    VOID (268) 20
    RETURN (269) 36
    SWITCH (270)
    CASE (271)
    DEFAULT (272)
    CONTINUE (273)
    PRINTLN (274) 35
    ADDOP (275) 48 51
    MULOP (276) 50
    INCOP (277) 59
    DECOP (278) 60
    RELOP (279) 46
    ASSIGNOP (280) 42
    LOGICOP (281) 44
    NOT (282) 52
    LPAREN (283) 7 9 31 32 33 34 35 55 56
    RPAREN (284) 7 9 31 32 33 34 35 55 56
    LCURL (285) 15 16
    RCURL (286) 15 16
    LTHIRD (287) 22 24 40
    RTHIRD (288) 22 24 40
    COMMA (289) 10 11 21 22 63
    SEMICOLON (290) 17 35 36 37 38
    CONST_INT (291) 22 24 57
    CONST_FLOAT (292) 58
    ID (293) 7 9 10 12 21 22 23 24 35 39 40 55
    LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    start (41)
        on left: 1
        on right: 0
    program (42)
        on left: 2 3
        on right: 1 2
    unit (43)
        on left: 4 5
        on right: 2 3
    func_definition (44)
        on left: 7 9
        on right: 5 28
    $@1 (45)
        on left: 6
        on right: 7
    $@2 (46)
        on left: 8
        on right: 9
    parameter_list (47)
        on left: 10 11 12 13
        on right: 7 10 11
    compound_statement (48)
        on left: 15 16
        on right: 7 9 30
    $@3 (49)
        on left: 14
        on right: 15
    var_declaration (50)
        on left: 17
        on right: 4 27
    type_specifier (51)
        on left: 18 19 20
        on right: 7 9 10 11 12 13 17
    declaration_list (52)
        on left: 21 22 23 24
        on right: 17 21 22
    statements (53)
        on left: 25 26
        on right: 15 26
    statement (54)
        on left: 27 28 29 30 31 32 33 34 35 36
        on right: 25 26 31 32 33 34
    expression_statement (55)
        on left: 37 38
        on right: 29 31
    variable (56)
        on left: 39 40
        on right: 42 54 59 60
    expression (57)
        on left: 41 42
        on right: 31 32 33 34 36 38 40 56
    logic_expression (58)
        on left: 43 44
        on right: 41 42 63 64
    rel_expression (59)
        on left: 45 46
        on right: 43 44
    simple_expression (60)
        on left: 47 48
        on right: 45 46 48
    term (61)
        on left: 49 50
        on right: 47 48 50
    unary_expression (62)
        on left: 51 52 53
        on right: 49 50 51 52
    factor (63)
        on left: 54 55 56 57 58 59 60
        on right: 53
    argument_list (64)
        on left: 61 62
        on right: 55
    arguments (65)
        on left: 63 64
        on right: 61 63


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   18 type_specifier: INT •

    $default  reduce using rule 18 (type_specifier)


State 2

   19 type_specifier: FLOAT •

    $default  reduce using rule 19 (type_specifier)


State 3

   20 type_specifier: VOID •

    $default  reduce using rule 20 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 10


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 9

    7 func_definition: type_specifier • ID LPAREN parameter_list RPAREN $@1 compound_statement
    9                | type_specifier • ID LPAREN RPAREN $@2 compound_statement
   17 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end •

    $default  accept


State 11

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 12

    7 func_definition: type_specifier ID • LPAREN parameter_list RPAREN $@1 compound_statement
    9                | type_specifier ID • LPAREN RPAREN $@2 compound_statement
   23 declaration_list: ID •
   24                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 23 (declaration_list)


State 13

   17 var_declaration: type_specifier declaration_list • SEMICOLON
   21 declaration_list: declaration_list • COMMA ID
   22                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    7 func_definition: type_specifier ID LPAREN • parameter_list RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN • RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   24 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   21 declaration_list: declaration_list COMMA • ID
   22                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 17

   17 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 17 (var_declaration)


State 18

    9 func_definition: type_specifier ID LPAREN RPAREN • $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 23


State 19

    7 func_definition: type_specifier ID LPAREN parameter_list • RPAREN $@1 compound_statement
   10 parameter_list: parameter_list • COMMA type_specifier ID
   11               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 24
    COMMA   shift, and go to state 25


State 20

   12 parameter_list: type_specifier • ID
   13               | type_specifier •

    ID  shift, and go to state 26

    $default  reduce using rule 13 (parameter_list)


State 21

   24 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 27


State 22

   21 declaration_list: declaration_list COMMA ID •
   22                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 28

    $default  reduce using rule 21 (declaration_list)


State 23

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 29

    compound_statement  go to state 30


State 24

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN • $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 31


State 25

   10 parameter_list: parameter_list COMMA • type_specifier ID
   11               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 32


State 26

   12 parameter_list: type_specifier ID •

    $default  reduce using rule 12 (parameter_list)


State 27

   24 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 24 (declaration_list)


State 28

   22 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 33


State 29

   15 compound_statement: LCURL • $@3 statements RCURL
   16                   | LCURL • RCURL

    RCURL  shift, and go to state 34

    $default  reduce using rule 14 ($@3)

    $@3  go to state 35


State 30

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement •

    $default  reduce using rule 9 (func_definition)


State 31

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 • compound_statement

    LCURL  shift, and go to state 29

    compound_statement  go to state 36


State 32

   10 parameter_list: parameter_list COMMA type_specifier • ID
   11               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 37

    $default  reduce using rule 11 (parameter_list)


State 33

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 38


State 34

   16 compound_statement: LCURL RCURL •

    $default  reduce using rule 16 (compound_statement)


State 35

   15 compound_statement: LCURL $@3 • statements RCURL

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 29
    SEMICOLON    shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50

    func_definition       go to state 51
    compound_statement    go to state 52
    var_declaration       go to state 53
    type_specifier        go to state 9
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 36

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement •

    $default  reduce using rule 7 (func_definition)


State 37

   10 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 10 (parameter_list)


State 38

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 22 (declaration_list)


State 39

   32 statement: IF • LPAREN expression RPAREN statement
   33          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 65


State 40

   31 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 66


State 41

   34 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 67


State 42

   36 statement: RETURN • expression SEMICOLON

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50

    variable           go to state 57
    expression         go to state 68
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 43

   35 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 69


State 44

   51 unary_expression: ADDOP • unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50

    variable          go to state 70
    unary_expression  go to state 71
    factor            go to state 64


State 45

   52 unary_expression: NOT • unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50

    variable          go to state 70
    unary_expression  go to state 72
    factor            go to state 64


State 46

   56 factor: LPAREN • expression RPAREN

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50

    variable           go to state 57
    expression         go to state 73
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 47

   37 expression_statement: SEMICOLON •

    $default  reduce using rule 37 (expression_statement)


State 48

   57 factor: CONST_INT •

    $default  reduce using rule 57 (factor)


State 49

   58 factor: CONST_FLOAT •

    $default  reduce using rule 58 (factor)


State 50

   39 variable: ID •
   40         | ID • LTHIRD expression RTHIRD
   55 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 74
    LTHIRD  shift, and go to state 75

    $default  reduce using rule 39 (variable)


State 51

   28 statement: func_definition •

    $default  reduce using rule 28 (statement)


State 52

   30 statement: compound_statement •

    $default  reduce using rule 30 (statement)


State 53

   27 statement: var_declaration •

    $default  reduce using rule 27 (statement)


State 54

   15 compound_statement: LCURL $@3 statements • RCURL
   26 statements: statements • statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 29
    RCURL        shift, and go to state 76
    SEMICOLON    shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
